welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: identifier expected but integer literal found.
		avance(nbPas:6);gauche();avance();gauche();
                             ^SnakeBuggle:8: error: ')' expected but '}' found.
		}else{
                ^SnakeBuggle:8: error: ';' expected but 'else' found.
		}else{
                 ^SnakeBuggle:15: error: Unmatched closing brace '}' ignored here
}
^